# domainspotter

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  fly.toml  pyproject.toml
domainspotter/: api.py  app.py  db.py  deps.py  domain_availability.py  domain_search.py  migrations.py  models.py
domainspotter/static/css/: main.css
domainspotter/templates/: 404.html  base.html  index.html  privacy.html  terms.html
static/css/: main.css
tests/: conftest.py  test_app.py  test_db.py  test_domain_availability.py  test_domain_search.py
